# c4h

./: .gitignore  FUNCTIONS.md  migrate_logging.py  requirements.txt
c4h_agents/: README.md  c4h_agents_api_doc.md  config.py  pyproject.toml  setup.py
c4h_agents/agents/: assurance.py  base.py  base_agent.py  base_config.py  base_lineage.py  base_llm.py  base_llm_continuation.py  coder.py  discovery.py  lineage_context.py  solution_designer.py  types.py
c4h_agents/agents/core/: project.py
c4h_agents/core/: project.py
c4h_agents/examples/: testharness.py
c4h_agents/examples/configs/: c4h_config.yml  coder_config01.yml  coder_config02.yml  coder_config03.yml  coder_config04.yml  iter_config_01.yml  iter_config_02.yml  refactor_config_00.yml  self_refactor_01.yml  simple_test.yml  solution_designer_test.yml
c4h_agents/skills/: _semantic_fast.py  _semantic_slow.py  asset_manager.py  semantic_extract.py  semantic_formatter.py  semantic_iterator.py  semantic_merge.py  tartxt.py
c4h_agents/skills/shared/: types.py
c4h_agents/src/agents/: base.py  coder.py
c4h_agents/src/skills/: _semantic_fast.py  asset_manager.py  semantic_iterator.py
c4h_agents/utils/: __init__.py  logging.py  string_utils.py
c4h_services/: ChangeLog.md  README.md  c4h_services_api_doc.md  pyproject.toml  setup.py
c4h_services/examples/: check_lineage.py  prefect_runner.py  run.sh
c4h_services/examples/config/: 0124_workflow_event_storage.yml  0124_workflow_event_storage_01.yml  0124_workflow_event_storage_02.yml  0131_event_storage_store_the_blob.yml  fix_base_metrics.yml  (+7 more)
(+63 files in other folders)
