[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c4h_agents"
version = "0.1.0"
authors = [
  { name="Jim" },
]
description = "Modern Python library for LLM-based code refactoring agents"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "structlog>=24.1.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.hatch.build]
include = ["src/**/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]